# factoranalysis

./: .gitignore  CLAUDE.md  README.md  app.py  factoranalysis.py  main.py  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
